[package]
name = "httpql"
authors = ["Caido Labs Inc. <dev@caido.io>"]
description = "Parser for the HTTPQL language"
repository = "https://github.com/caido/httpql"
license = "MIT"
version = "0.1.2"
edition = "2021"

[dependencies]
thiserror = { version = "1" }
pest = { version = "2" }
pest_derive = { version = "2" }

[dev-dependencies]
rstest = { version = "0.18" }
